Fix responsive css and disable animation on mobile devices

--- a/project/assets/css/all.css
+++ b/project/assets/css/all.css
@@ -1096,9 +1096,14 @@ html, body {
     position: relative;
 }
 
+@media (max-height: 890px) {
+    .intro-copy {
+        top: 175px !important;
+    }
+}
 .intro-copy {
     position: relative;
-    top: 200px;
+    top: 20%;
     z-index: 1;
 }
 
@@ -1640,7 +1645,7 @@ html, body {
     z-index: 1;
     width: 100%;
     position: relative;
-    top: 160px;
+    top: 20%;
 }
 
 #featuresMonitor {
