--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -1096,9 +1096,14 @@ html, body {
     position: relative;
 }
 
+@media (max-height: 890px) {
+    .intro-copy {
+        top: 175px !important;
+    }
+}
 .intro-copy {
     position: relative;
-    top: 200px;
+    top: 20%;
     z-index: 1;
 }
 
