--- a/project/assets/css/second.css
+++ b/project/assets/css/second.css
@@ -79,7 +79,7 @@
     z-index: 1;
     width: 100%;
     position: relative;
-    top: 160px;
+    top: 20%;
 }
 
 #featuresMonitor {
